// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SelectTeam should match snapshot for fail of teams 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <SelectTeam
    actions={
      Object {
        "getTeams": [Function],
        "handleTeamChange": [MockFunction],
        "joinTeam": [MockFunction],
        "logout": [MockFunction],
        "markChannelAsRead": [MockFunction],
      }
    }
    currentChannelId="someId"
    currentUrl="test"
    joinTeamRequest={Object {}}
    navigator={
      Object {
        "setOnNavigatorEvent": [MockFunction] {
          "calls": Array [
            Array [
              [Function],
            ],
          ],
          "results": Array [
            Object {
              "isThrow": false,
              "value": undefined,
            },
          ],
        },
      }
    }
    teams={Array []}
    teamsRequest={
      Object {
        "status": "failure",
      }
    }
    theme={Object {}}
    userWithoutTeams={false}
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "class",
    "props": Object {
      "errorDescription": Object {
        "defaultMessage": "Make sure you have an active connection and try again.",
        "id": "mobile.failed_network_action.shortDescription",
      },
      "errorTitle": Object {
        "defaultMessage": "Team Not Found",
        "id": "error.team_not_found.title",
      },
      "onRetry": [Function],
      "theme": Object {},
    },
    "ref": null,
    "rendered": null,
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "errorDescription": Object {
          "defaultMessage": "Make sure you have an active connection and try again.",
          "id": "mobile.failed_network_action.shortDescription",
        },
        "errorTitle": Object {
          "defaultMessage": "Team Not Found",
          "id": "error.team_not_found.title",
        },
        "onRetry": [Function],
        "theme": Object {},
      },
      "ref": null,
      "rendered": null,
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getDerivedStateFromProps": true,
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
    "attachTo": undefined,
    "hydrateIn": undefined,
  },
}
`;

exports[`SelectTeam should match snapshot for teams 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <SelectTeam
    actions={
      Object {
        "getTeams": [Function],
        "handleTeamChange": [MockFunction],
        "joinTeam": [MockFunction],
        "logout": [MockFunction],
        "markChannelAsRead": [MockFunction],
      }
    }
    currentChannelId="someId"
    currentUrl="test"
    joinTeamRequest={Object {}}
    navigator={
      Object {
        "setOnNavigatorEvent": [MockFunction] {
          "calls": Array [
            Array [
              [Function],
            ],
          ],
          "results": Array [
            Object {
              "isThrow": false,
              "value": undefined,
            },
          ],
        },
      }
    }
    teams={
      Array [
        Object {
          "id": "kemjcpu9bi877yegqjs18ndp4r",
          "invite_id": "ojsnudhqzbfzpk6e4n6ip1hwae",
          "name": "test",
        },
      ]
    }
    teamsRequest={
      Object {
        "status": "success",
      }
    }
    theme={Object {}}
    userWithoutTeams={false}
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "class",
    "props": Object {
      "children": Array [
        <Connect(StatusBar) />,
        <Component
          style={
            Object {
              "alignItems": "center",
              "flexDirection": "row",
              "marginHorizontal": 16,
              "marginTop": 20,
            }
          }
        >
          <Component
            style={
              Object {
                "marginRight": 15,
              }
            }
          >
            <FormattedText
              defaultMessage="Open teams you can join"
              id="mobile.select_team.join_open"
              style={
                Object {
                  "color": undefined,
                  "fontSize": 13,
                }
              }
            />
          </Component>
          <Component
            style={
              Object {
                "backgroundColor": undefined,
                "height": 1,
                "width": "100%",
              }
            }
          />
        </Component>,
        <FlatList
          data={
            Array [
              Object {
                "id": "kemjcpu9bi877yegqjs18ndp4r",
                "invite_id": "ojsnudhqzbfzpk6e4n6ip1hwae",
                "name": "test",
              },
            ]
          }
          disableVirtualization={false}
          horizontal={false}
          initialNumToRender={10}
          keyExtractor={[Function]}
          maxToRenderPerBatch={10}
          numColumns={1}
          onEndReachedThreshold={2}
          renderItem={[Function]}
          scrollEventThrottle={50}
          updateCellsBatchingPeriod={50}
          viewabilityConfig={
            Object {
              "viewAreaCoveragePercentThreshold": 3,
              "waitForInteraction": false,
            }
          }
          windowSize={21}
        />,
      ],
      "style": Object {
        "backgroundColor": undefined,
        "flex": 1,
      },
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {},
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "children": Array [
            <Component
              style={
                Object {
                  "marginRight": 15,
                }
              }
            >
              <FormattedText
                defaultMessage="Open teams you can join"
                id="mobile.select_team.join_open"
                style={
                  Object {
                    "color": undefined,
                    "fontSize": 13,
                  }
                }
              />
            </Component>,
            <Component
              style={
                Object {
                  "backgroundColor": undefined,
                  "height": 1,
                  "width": "100%",
                }
              }
            />,
          ],
          "style": Object {
            "alignItems": "center",
            "flexDirection": "row",
            "marginHorizontal": 16,
            "marginTop": 20,
          },
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "children": <FormattedText
                defaultMessage="Open teams you can join"
                id="mobile.select_team.join_open"
                style={
                  Object {
                    "color": undefined,
                    "fontSize": 13,
                  }
                }
              />,
              "style": Object {
                "marginRight": 15,
              },
            },
            "ref": null,
            "rendered": Object {
              "instance": null,
              "key": undefined,
              "nodeType": "class",
              "props": Object {
                "defaultMessage": "Open teams you can join",
                "id": "mobile.select_team.join_open",
                "style": Object {
                  "color": undefined,
                  "fontSize": 13,
                },
              },
              "ref": null,
              "rendered": null,
              "type": [Function],
            },
            "type": [Function],
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "style": Object {
                "backgroundColor": undefined,
                "height": 1,
                "width": "100%",
              },
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
        ],
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "data": Array [
            Object {
              "id": "kemjcpu9bi877yegqjs18ndp4r",
              "invite_id": "ojsnudhqzbfzpk6e4n6ip1hwae",
              "name": "test",
            },
          ],
          "disableVirtualization": false,
          "horizontal": false,
          "initialNumToRender": 10,
          "keyExtractor": [Function],
          "maxToRenderPerBatch": 10,
          "numColumns": 1,
          "onEndReachedThreshold": 2,
          "renderItem": [Function],
          "scrollEventThrottle": 50,
          "updateCellsBatchingPeriod": 50,
          "viewabilityConfig": Object {
            "viewAreaCoveragePercentThreshold": 3,
            "waitForInteraction": false,
          },
          "windowSize": 21,
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
    ],
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "children": Array [
          <Connect(StatusBar) />,
          <Component
            style={
              Object {
                "alignItems": "center",
                "flexDirection": "row",
                "marginHorizontal": 16,
                "marginTop": 20,
              }
            }
          >
            <Component
              style={
                Object {
                  "marginRight": 15,
                }
              }
            >
              <FormattedText
                defaultMessage="Open teams you can join"
                id="mobile.select_team.join_open"
                style={
                  Object {
                    "color": undefined,
                    "fontSize": 13,
                  }
                }
              />
            </Component>
            <Component
              style={
                Object {
                  "backgroundColor": undefined,
                  "height": 1,
                  "width": "100%",
                }
              }
            />
          </Component>,
          <FlatList
            data={
              Array [
                Object {
                  "id": "kemjcpu9bi877yegqjs18ndp4r",
                  "invite_id": "ojsnudhqzbfzpk6e4n6ip1hwae",
                  "name": "test",
                },
              ]
            }
            disableVirtualization={false}
            horizontal={false}
            initialNumToRender={10}
            keyExtractor={[Function]}
            maxToRenderPerBatch={10}
            numColumns={1}
            onEndReachedThreshold={2}
            renderItem={[Function]}
            scrollEventThrottle={50}
            updateCellsBatchingPeriod={50}
            viewabilityConfig={
              Object {
                "viewAreaCoveragePercentThreshold": 3,
                "waitForInteraction": false,
              }
            }
            windowSize={21}
          />,
        ],
        "style": Object {
          "backgroundColor": undefined,
          "flex": 1,
        },
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {},
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "children": Array [
              <Component
                style={
                  Object {
                    "marginRight": 15,
                  }
                }
              >
                <FormattedText
                  defaultMessage="Open teams you can join"
                  id="mobile.select_team.join_open"
                  style={
                    Object {
                      "color": undefined,
                      "fontSize": 13,
                    }
                  }
                />
              </Component>,
              <Component
                style={
                  Object {
                    "backgroundColor": undefined,
                    "height": 1,
                    "width": "100%",
                  }
                }
              />,
            ],
            "style": Object {
              "alignItems": "center",
              "flexDirection": "row",
              "marginHorizontal": 16,
              "marginTop": 20,
            },
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "class",
              "props": Object {
                "children": <FormattedText
                  defaultMessage="Open teams you can join"
                  id="mobile.select_team.join_open"
                  style={
                    Object {
                      "color": undefined,
                      "fontSize": 13,
                    }
                  }
                />,
                "style": Object {
                  "marginRight": 15,
                },
              },
              "ref": null,
              "rendered": Object {
                "instance": null,
                "key": undefined,
                "nodeType": "class",
                "props": Object {
                  "defaultMessage": "Open teams you can join",
                  "id": "mobile.select_team.join_open",
                  "style": Object {
                    "color": undefined,
                    "fontSize": 13,
                  },
                },
                "ref": null,
                "rendered": null,
                "type": [Function],
              },
              "type": [Function],
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "class",
              "props": Object {
                "style": Object {
                  "backgroundColor": undefined,
                  "height": 1,
                  "width": "100%",
                },
              },
              "ref": null,
              "rendered": null,
              "type": [Function],
            },
          ],
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "data": Array [
              Object {
                "id": "kemjcpu9bi877yegqjs18ndp4r",
                "invite_id": "ojsnudhqzbfzpk6e4n6ip1hwae",
                "name": "test",
              },
            ],
            "disableVirtualization": false,
            "horizontal": false,
            "initialNumToRender": 10,
            "keyExtractor": [Function],
            "maxToRenderPerBatch": 10,
            "numColumns": 1,
            "onEndReachedThreshold": 2,
            "renderItem": [Function],
            "scrollEventThrottle": 50,
            "updateCellsBatchingPeriod": 50,
            "viewabilityConfig": Object {
              "viewAreaCoveragePercentThreshold": 3,
              "waitForInteraction": false,
            },
            "windowSize": 21,
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
      ],
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getDerivedStateFromProps": true,
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
    "attachTo": undefined,
    "hydrateIn": undefined,
  },
}
`;
